# imjangReportGenerator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
docs/: API_KEYS_AND_PREFLIGHT.md  HERMES_AGENT.md  PROJECT_STRUCTURE.md  PYTHON_GUIDE.md  RELEASE_CHECKLIST.md  anyang-2026-06-map-mismatch-hidden-apartments.md  data-go-kr-direct-crosscheck.md  notion-md-zip-review-selection.md  wsl_data_go_kr_outbound.md
examples/: README.md
skills/hermes/real-estate-site-visit/: SKILL.md
src/imjang_report/scripts/: build_report.py  build_report_v3.py  check_setup.py  cluster_photos.py  collect_apartments_near_route.py  enrich_naver_complexes.py  export_notion_md_zip.py  extract_photo_gps.py  fetch_molit.py  filter_news.py  geocode_kakao.py  geocode_vworld.py  run_pipeline.py  score_apartments.py
tests/: test_build_report.py  test_naver_land_link.py  test_no_network_pipeline.py  test_poi_filter.py
